--- a/.github/workflows/cpanel-deploy.yml
+++ b/.github/workflows/cpanel-deploy.yml
@@ -17,3 +17,9 @@ jobs:
           repository_root: '${{ secrets.CPANEL_REMOTE_PATH }}'
           branch: main
           cpanel_token: '${{ secrets.CPANEL_API_TOKEN }}'
+      - name: Purge cache
+        uses: jakejarvis/cloudflare-purge-action@master
+        env:
+          # Zone is required by both authentication methods
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
