minimal ui setting

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
     "background_color": "#fdfdfd",
     "theme_color": "#111111",
     "orientation": "portrait-primary",
+    "display": "minimal-ui",
     "icons": [
     {
         "src": "/img/icons/icon_48x48.png",
