--- a/.github/workflows/cpanel-deploy.yml
+++ b/.github/workflows/cpanel-deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 jobs:
-  deploy:
+    deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to cPanel
@@ -15,9 +15,8 @@ jobs:
           hostname: '${{ secrets.CPANEL_HOSTING_URL }}'
           repository_root: '${{ secrets.CPANEL_REMOTE_PATH }}'
           branch: main
-          cpanel_token: '${{ secrets.CPANEL_API_TOKEN }}'
-      - name: echo deploy-duration
-        run: echo "Deployment took ${{ steps.deploy.outputs.duration }} milliseconds"
+          cpanel_token: '${{ secrets.CPANEL_TOKEN }}'
+          cpanel_username: '${{ secrets.CPANEL_USERNAME }}'
       - name: echo deploy-duration
         run: echo "Deployment took ${{ steps.deploy.outputs.duration }} milliseconds"
       - name: Purge cache
