--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
     "start_url": "index.html",
     "id": "App",
     "display": "standalone",
-    "description": "Scrobble Indie Radio to last.fm",
+    "description": "Awesome radio, everyday",
     "lang": "en",
-    "categories": "entertainment,music,news",
+    "categories": "entertainment,music",
     "background_color": "#fdfdfd",
     "theme_color": "#111111",
     "orientation": "portrait-primary",
